--- a/front-end/src/pages/home-page/home-page.css
+++ b/front-end/src/pages/home-page/home-page.css
@@ -55,5 +55,68 @@ body {
     align-items: center;
 }
 .feature-section{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 40px;
+}
+.feature-section .title{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+.feature-section .title h2{
+    text-align: center;
+    color: #0066CC;
+    font-size: 2rem;
+    width: 60%;
+}
+.feature-section .feature-container{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    gap: 35px;
+}
+.cta{
+    height: 100vh;
+    width: 100%;
+    background-image: url("/question.jpg");
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+.cta::before{
+    content: "";
+    height: 100%;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.612);
+    position: absolute;
+    top: 0;
+    left: 0;
+    
+}
+.cta .text{
+    z-index: 22;
+}
+.cta .text h3{
+    font-size: 3rem;
+    color: #fff;
+}
+.cta .text p{
+    color: #fff;
+    font-size: 1.2rem;
+}
+.cta .text button{
+    padding: 5px 10px;
+    background-color: #fff;
+    border: none;
+    margin-right: 10px;
+    border-radius: 5px;
+}
+footer{
     height: 100vh;
 }
