--- a/front-end/src/pages/home-page/home-page.css
+++ b/front-end/src/pages/home-page/home-page.css
@@ -1,122 +1,47 @@
-:root {
-    --background: #f5f5f5;
-    --primary-color: #0066CC;
-}
-
-body {
-    background-color: var(--background);
-}
-
-.hero-section {
-    height: 100vh;
-    display: flex;   
-}
-.hero-section img{
-    width: 450px;
-}
-.hero-section .text-container{
-    height: calc(100% - 55px);
-    width: 50%;
-    margin-top: 55px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.hero-section .text-container .text{
-    color: #333;
-    width: 85%;
-    padding: 10px;
-}
-.text p{
-    font-size: 0.9rem;
-    margin-top: 10px;
-    margin-bottom: 35px;
-}
-.text-container .text ul li{
-    font-size: 0.9rem;
-    list-style: none;
-    margin: 9px 0;
-    position: relative;
-    padding-left: 28px;
-    line-height: 25px;
-}
-.text-container .text ul li img{
-    position: absolute;
-    width: 17px;
-    left: 0;
-    top: 4px;
-}
-.hero-section .image{
-    width: 50%;
-    height: calc(100% - 55px);
-    margin-top: 55px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.feature-section{
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    gap: 40px;
-}
-.feature-section .title{
-    width: 100%;
-    display: flex;
-    justify-content: center;
-}
-.feature-section .title h2{
-    text-align: center;
-    color: #0066CC;
-    font-size: 2rem;
-    width: 60%;
-}
-.feature-section .feature-container{
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    gap: 35px;
-}
-.cta{
-    height: 100vh;
-    width: 100%;
-    background-image: url("/question.jpg");
-    background-size: cover;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-}
-.cta::before{
-    content: "";
-    height: 100%;
-    width: 100%;
-    background-color: rgba(0, 0, 0, 0.612);
+.home-page{
+    background-color: #fff; 
+    min-height: 100vh;
+    height: auto;
+    width: calc(100% - 220px - 270px);
     position: absolute;
     top: 0;
-    left: 0;
-    
+    left: 220px;
+    padding: 20px;
+    display: flex;
+    justify-content: center;
+
 }
-.cta .text{
-    z-index: 22;
+.home-page .posts-sction {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+    width: 480px;
+
 }
-.cta .text h3{
-    font-size: 3rem;
-    color: #fff;
+.posts-sction .create-quizz-section{
+    width: 100%;
+    background-color: #F9F9F9;
+    border-radius:5px;
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+    gap: 10px;
 }
-.cta .text p{
-    color: #fff;
-    font-size: 1.2rem;
+.posts-sction .create-quizz-section h3{
+    font-weight: 400;
+    font-size: 1.1rem;
+    text-align: center;
 }
-.cta .text button{
-    padding: 5px 10px;
+.posts-sction .create-quizz-section button{
     background-color: #fff;
-    border: none;
-    margin-right: 10px;
+    border: 1px solid #0066CC;
+    color: #0066CC;
+    padding: 5px;
     border-radius: 5px;
+    cursor: pointer;
+    transition: all 0.3s ease;
 }
-footer{
-    height: 100vh;
-}
+.posts-sction .create-quizz-section button:hover{
+    opacity: 0.6;
+}   
